Added solution environment and \inlinesolution command

--- a/exercise/example.tex
+++ b/exercise/example.tex
@@ -1,4 +1,4 @@
-\documentclass[english, uulm]{exercise}
+\documentclass[english, uulm, solution]{exercise}
 
 \title{Name of the lecture}
 \author{Lukas Pietzschmann}
@@ -23,7 +23,11 @@
 		Example Init Task:
 		\begin{tasks}
 			\item Task 1
+				\begin{solution}
+					This is the loooooooooooooooooooooooooooooong solution for the way to complex first Task.
+				\end{solution}
 			\item Task 2
+				\inlinesolution{This was easy and has a short answer.}
 		\end{tasks}
 	\end{exercise}
 \end{document}
