--- a/exercise/example.tex
+++ b/exercise/example.tex
@@ -28,6 +28,8 @@
 				\end{solution}
 			\item Task 2
 				\inlinesolution{This was easy and has a short answer.}
+			\item Task 3
+				\onelinesolution{I'm to long to be printed inline, but not long enough for multiple lines.}
 		\end{tasks}
 	\end{exercise}
 \end{document}
