Set monospace font to Fira Code

--- a/exercise/exercise.cls
+++ b/exercise/exercise.cls
@@ -133,6 +133,9 @@
 \newkomafont{uni}{\footnotesize\slshape}
 
 \setmainfont{FiraSans}
+\setmonofont{Fira Code}[
+	Contextuals=Alternate
+]
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
