[Exercise] added some little improvements

--- a/exercise/example.tex
+++ b/exercise/example.tex
@@ -13,6 +13,10 @@
 \begin{document}
 	\maketitle
 
+	\begin{exercise}[Exercise 0]{Setup}
+		Setup some stuff to be able to do all following tasks. Also demonstrate custom exercise numbers.
+	\end{exercise}
+
 	\begin{exercise}{Example Title}
 		Example Init Task:
 		\begin{tasks}
