--- a/article/example.tex
+++ b/article/example.tex
@@ -29,7 +29,9 @@ and will definitely make you wanna read it!
 
 \section{Section One}
 
-\lipsum{1}
+\lipsum[1]{1}
+\sidenote{This is a nice note}
+\lipsum[2-5]{1}
 \par
 Here comes some code:
 
