[Article] Added sidenote option

--- a/article/article.cls
+++ b/article/article.cls
@@ -30,6 +30,8 @@
 	\@english@false
 }
 
+\DeclareBoolOption{sidenote}
+
 \ProcessKeyvalOptions*
 
 \if@english@
@@ -192,8 +194,8 @@
 \renewcommand\fullref[1]{\hyperref[{#1}]{\autoref*{#1}~- \nameref*{#1}~\vpageref{#1}}}
 \newcommand\equref[1]{\hyperref[{#1}]{\autoref*{#1}}}
 \newcommand\emptypage{\clearpage\thispagestyle{empty}\mbox{}\clearpage}
-\newcommand\sidenote[1]{\unskip~\marginpar{\hspace{0pt}\raggedright\small\itshape #1}($\rightarrow$)}
-\newcommand\dash{\unskip\nobreak\thinspace\textendash\thinspace\ignorespaces}
+\newcommand\note[1]{\if@sidenote\sidenote{#1}\else\footnote{#1}\fi}
+\newcommand\sidenote[1]{\unskip~\marginpar{\hspace{0pt}\raggedright\small\itshape#1}(\textrightarrow)}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
