--- a/article/example.tex
+++ b/article/example.tex
@@ -1,4 +1,4 @@
-\documentclass[english]{article}
+\documentclass[german, sidenote]{article}
 
 \title{What an awesome Title for a Paper}
 \author{Lukas Pietzschmann}
