[Article] Smaller updates

--- a/article/example.tex
+++ b/article/example.tex
@@ -1,4 +1,4 @@
-\documentclass[german, sidenote]{article}
+\documentclass[english, sidenote]{article}
 
 \title{What an awesome Title for a Paper}
 \author{Lukas Pietzschmann}
@@ -19,14 +19,15 @@
 \maketitle
 
 \begin{abstract}
-Here comes my cool and very interesting abstract, that will describe what this paper is all about
-and will definitely make you wanna read it!
-\lipsum[2-3]
+	Here comes my cool and very interesting abstract, that will describe what this paper is all about
+	and will definitely make you wanna read it!
+	\lipsum[2-3]
 \end{abstract}
 
 \tableofcontents
 
 \emptypage
+\setcounter{page}{1}
 
 \section{Section One}
 
