--- a/article/example.tex
+++ b/article/example.tex
@@ -50,7 +50,7 @@ Here comes some beautiful code highlighted using the \texttt{minted} package:
 \label{lst:test}
 \end{listing}
 \lipsum[1-4]\par
-Let's now reference \fullref{lst:test}. You can see how nice this reference looks. What's awesome about this is that we display the page
+Let's now reference the \cpp~code from \fullref{lst:test}. You can see how nice this reference looks. What's awesome about this is that we display the page
 number of the referenced thing. But we do so only of the reference if not on the same page.
 
 \begin{appendix}
