--- a/article/example.tex
+++ b/article/example.tex
@@ -29,8 +29,13 @@
 \emptypage
 \setcounter{page}{1}
 
-\section{Section One}
+\section{Colors}
+Those are the default colors used by this class:\\
+\showcolor{red}, \showcolor{green}, \showcolor{blue}, \showcolor{cyan}, \showcolor{magenta}, \showcolor{yellow},
+\showcolor{black}, \showcolor{gray}, \showcolor{white}, \showcolor{darkgray}, \showcolor{lightgray}, \showcolor{brown},
+\showcolor{lime}, \showcolor{olive}, \showcolor{orange}, \showcolor{pink}, \showcolor{purple}, \showcolor{teal}, \showcolor{violet}.
 
+\section{Text}
 \lipsum[1-3]
 Here comes a note\note{This is a nice note than can be a foot- or margin-note}
 \lipsum[1]
