--- a/article/example.tex
+++ b/article/example.tex
@@ -1,4 +1,4 @@
-\documentclass[english, sidenote]{article}
+\documentclass[english, sidenote, awesomeminted]{article}
 
 \title{What an awesome Title for a Paper}
 \author{Lukas Pietzschmann}
