[Thesis] article is now called thesis

--- a/thesis/example.tex
+++ b/thesis/example.tex
@@ -1,4 +1,4 @@
-\documentclass[english, sidenote, awesomeminted]{article}
+\documentclass[english, sidenote, awesomeminted]{thesis}
 
 \title{What an awesome Title for a Paper}
 \author{Lukas Pietzschmann}
