[Exercise] Each exercise now generates an entry in the outline

--- a/exercise/exercise.cls
+++ b/exercise/exercise.cls
@@ -223,12 +223,15 @@
 
 \newcounter{excounter}
 \newenvironment{exercise}[2][\empty]{%
-	\ifx#1\empty
-		\refstepcounter{excounter}%
-	\fi
-	\vspace{2em}
+	\def\ex{\if@english@ Exercise\else Aufgabe\fi~\arabic{excounter}}
+	\ifx#1\empty\refstepcounter{excounter}\fi\vspace{2em}
 	\relax\parbox\linewidth{
-		{\usekomafont{disposition}\ifx#1\empty\if@english@ Exercise\else Aufgabe\fi~\arabic{excounter}\else#1\fi}\quad{\usekomafont{subsection}\textcolor{darkgray}{#2}}
+		{\usekomafont{disposition}\ifx#1\empty
+			\ex\pdfbookmark[0]{\ex}{Ex. \arabic{excounter}}
+		\else
+			\pdfbookmark[0]{#1}{Ex. \arabic{excounter}}#1
+		\fi}
+		\quad{\usekomafont{subsection}\textcolor{darkgray}{#2}}
 	}
 	\par
 }{\par}
