[Report] Added copyright

--- a/report/example.tex
+++ b/report/example.tex
@@ -7,6 +7,10 @@
 \uni{University of Ulm}
 \institute{Institute of Software Engineering and Programming Languages}
 \date{01.01.2023}
+\copyright{
+	\textcopyright~CC-BY-SA This work is licensed under a Creative Commons Attribution-ShareAlike
+	4.0 International License. https://creativecommons.org/licenses/by-sa/4.0/
+}
 
 \usepackage{lipsum}
 
